@@ -1,6 +1,5 @@
 # Copyright (c) 2003 The Connexions Project, All Rights Reserved
 # Written by Brent Hendricks
 
-"""Interface for computing object differences"""
-
-#placeholder for bridged interfaces
+from Products.CMFDiffTool.interfaces import IDifference
+from Products.CMFDiffTool.interfaces import IDiffTool as portal_diff
